--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,14 @@
   "name": "GeoHunt",
   "short_name": "GeoHunt",
   "description": "A location-based hunting game",
-  "start_url": "/",
+  "start_url": "/geohunt/",
+  "scope": "/geohunt/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/satellite.png",
+      "src": "/geohunt/satellite.png",
       "sizes": "192x192",
       "type": "image/png"
     }
